# habit_tracker

./: .coveragerc  .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yml  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
habit_tracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
tracker/: admin.py  habit_services.py  habit_validators.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
tracker/management/commands/: chabit.py
tracker/migrations/: 0001_initial.py  0002_initial.py  0003_remove_habit_phone_number.py
users/: admin.py  models.py  paginators.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cau.py
users/migrations/: 0001_initial.py
