[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = "A habit tracking application with Django and Celery"
authors = ["Aleksey Zvyagintsev <alex0236889@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "^5.0"
drf-spectacular = "^0.29.0"
python-dotenv = "^1.1.1"
psycopg2-binary = "2.9.11"
pillow = "^12.1.0"
gunicorn = "^23.0"
celery = "^5.6.2"
redis = "^5.0.3"
telebot = "^0.0.5"
djangorestframework = "^3.16.1"
django-celery-beat = "2.8.1"
django-filter = "^25.2"
django-cors-headers = "^4.9.0"
djangorestframework-simplejwt = "^5.5.1"
email-validator = "^2.3.0"
APScheduler = "^3.11.1"
django-apscheduler = "^0.7.0"

[tool.poetry.group.lint.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.8.0"
coverage = "^7.13.2"

[tool.black]
line-length = 119
target-version = ['py312']
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
skip = [".venv", ".mypy_cache", "tests"]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
warn_unreachable = true
strict = true
exclude = [
    "venv",
    ".venv",
    "tests",
    "__pycache__"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "habit_tracker.settings"
addopts = "-v --tb=short"
testpaths = ["tests"]
